--- a/styles.css
+++ b/styles.css
@@ -48,9 +48,9 @@ li{
 .contentBox{
     height: 100%;
     width: 90%;
+    max-width: 1300px;
 
     align-content: center;
-    max-width: 1300px;
     justify-content: center;
 
     border: 2px solid black;
@@ -59,15 +59,19 @@ li{
 h1{
     font-family: "Plus Jakarta Sans", sans-serif;
     font-weight: 400;
-    font-size: 90px !important;    
+    font-size: 50px !important;    
     color: rgba(248, 250, 241) !important;
-    text-align: left;
+    text-align: center;
     width: fit-content;
-    margin-left: 20px;
+    margin: 50px auto;
+
+
+    border: 2px solid black;
 }
 
 p{
-    text-align: left;
+    text-align: center;
+    margin: auto;
     font-size: 20px;
     color: rgba(248, 250, 241, 50);
     margin-bottom: 10px;
@@ -92,6 +96,7 @@ p{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: rgba(248, 250, 241);
 }
 
 .serviceHeading{
@@ -134,9 +139,6 @@ p{
  
 }
 
-.servicestwo{
-    background-color: rgba(48, 63, 47);
-}
 
 
 
@@ -196,10 +198,7 @@ h4{
     padding: 10px 55px;
 }
 
-.logo{
-    width: 100%;
-    height: 100%;
-}
+
 
 
 .accordion{
@@ -241,9 +240,7 @@ h4{
         flex-direction: column;
     }
 
-    .logo{
-        width: 50%;
-    }
+  
 }
 
 
@@ -258,6 +255,10 @@ h4{
         width: 75%;
         display: flex;
         margin: 10px auto;
+    }
+
+    h1{
+        font-size: 48px !important;
     }
 
     h2{
@@ -286,10 +287,7 @@ h4{
         flex-direction: column;
     }
 
-    h1{
-        font-size: 52px !important;
-        margin-left: 0;
-    }
+
 
     p{
         font-size: 18px;
@@ -304,8 +302,4 @@ h4{
         justify-content: center;
         flex-direction: column;
     }
-
-    .logo{
-        width: 70%;
-    }
-};
+}
