--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 
-
 /* Navbar */
 a{
     list-style-type: none;
@@ -142,17 +141,32 @@ p{
     fill: rgba(48 63 47);
 }
 
-/** For mobile devices **/
-@media (max-width: 767px) {
-    .custom-shape-divider-bottom-1746404555 svg {
-        width: calc(253% + 1.3px);
-        height: 43px;
-    }
-}
 /* About Us Section */
+.aboutUsSection{
+    height: 100%;
+}
+.aboutUsContainer{
+    height: fit-content;
+    width: 80%;
+    margin: auto;
+}
 
 .aboutUsDescription{
     margin: auto;
+    font-size: 24px;
+    line-height: 1.8;
+    opacity: .8;
+}
+.aboutUsHeading{
+   font-size: 28px;
+   color: rgba(248, 250, 241);
+   text-align: center;
+   margin-bottom: 7%;
+}
+
+.spanBold{
+    font-weight: 600;
+    font-size: 30px;
 }
 
 /* ABOUT US-SERVICES DIVIDER CSS */
@@ -320,19 +334,15 @@ strong{
     margin-top: 10px;
 }
 
-span{
-    line-height: 1.2;
-    text-align: left;
-}
-
 
 @media (min-width: 800px) and (max-width: 1287px){
     li{
         padding: 0 20px;
     }
-    h2{
+    .serviceName{
         top: 70%;
     }
+
     .services_container{
         height: 15%;
         width: 75%;
@@ -368,7 +378,7 @@ span{
     h1{
         font-size: 48px !important;
     }
-    h2{
+    .serviceName{
         top: 70%;
     }
     p{
@@ -404,5 +414,32 @@ span{
     .contact{
         padding-top: 50px;
         height: 100vh;  
+    }
+    .name{
+        font-size: 12px;
+    }
+    
+    .navImage{
+        width: 40px;
+        height: 40px;
+    }
+    .custom-shape-divider-bottom-1746404555 svg {
+        width: calc(253% + 1.3px);
+        height: 43px;
+    }
+
+    .aboutUsHeading{
+        font-size: 16px;
+        margin-bottom: 4%;
+     }
+
+    .aboutUsDescription{
+        margin: auto;
+        font-size: 18px;
+        line-height: 1.7;
+        opacity: .8;
+    }
+    .spanBold{
+        font-size: 20px;
     }
 }
