--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ p{
 /* SERVICES SECTION*/
 .services{
     width: 100vw;
-    height: 100vh;
+    height: fit-content;
     position: relative;
     top: 0;
     display: flex;
@@ -211,11 +211,9 @@ p{
 .serviceContentBox{
     display: flex;
     flex-wrap: wrap;
-    overflow-y: auto;
     max-width: 1300px;
     width: 90%;
     justify-content: center;
-
 }
 .services_container{
     display: flex;
@@ -260,36 +258,49 @@ p{
 .gallerySection{
     height: 100vh;
     width: 100vw;
-
-}
-.contentBoxGallery{
-    margin: auto;
-    overflow: auto;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-}
-.gallery{
-    margin: auto;
-    width: 400px;
-    height: 80%;
-    margin: auto;
-
-    margin: 0 10px;
-}
-.galleryCard{
-    width: 100%;
-    height: 100%;
-    margin: auto;
-}
-.galleryImage{
-    width: 100%;
-    height: 100%;
 }
 
+.slider-wrapper{
+    position: relative;
+    max-width: 48rem;
+    margin: 0 auto;
+}
+.slider{
+    display: flex;
+    aspect-ratio: 1/1;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0,0,0,.75);
+}
+.slider img{
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+}
+.slider-nav{
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.slider-nav a{
+    width: .5rem;
+    height: .5rem;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: .75;
+    transition: opacity ease 250ms;
+}
+.slider-nav a:hover{
+    opacity: 1;
+}
 /*CONTACT SECTION*/
-/* 
-GALLERY TO CONTACT DIVIDER */
+/* GALLERY TO CONTACT DIVIDER */
 
 .custom-shape-divider-top-1746406472 {
     position: absolute;
@@ -425,15 +436,11 @@ strong{
     p{
         font-size: 18px;
     }
-    .services{
-        height: 200vh;
-    }
 
     .serviceContentBox{
         width: 100%;
     }
     .services_container{
-        height: 600px;
         width: 80%;
         display: flex;
         flex-wrap: none;
